<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeffffff">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/do_filter">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- 검색하기 & X-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_search"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/ic_pencil"
                    android:gravity="center"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"/>
                <ImageButton
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close"
                    android:background="@null"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>

            <!-- 장소 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:text="@string/filter_place"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableRight="@drawable/ic_edit_remove"
                    android:layout_marginRight="25dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#efefef"/>
            <!-- 일정 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:text="@string/filter_date"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:textColor="#585858"
                            android:layout_margin="5dp"
                            android:button="@drawable/selector_check"
                            android:text="@string/filter_check_notnow"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:textColor="#585858"
                            android:layout_margin="5dp"
                            android:button="@drawable/selector_check"
                            android:text="@string/filter_check_thunder"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_calendar"
                            android:layout_gravity="center_vertical"/>
                        <EditText
                            android:layout_width="180dp"
                            android:layout_height="40dp"
                            android:textSize="15sp"
                            android:textColorHint="#c8c8c8"
                            android:drawableRight="@drawable/ic_arrow_bottom"
                            android:inputType="date"
                            android:hint="@string/filter_hint_select_date"/>
                    </LinearLayout>
                </LinearLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColorHint="#c8c8c8"
                    android:drawableRight="@drawable/ic_view_list_white_24dp"
                    android:layout_marginRight="25dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#efefef"/>
            <!-- 인원 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:text="@string/filter_human"
                        android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/selector_check"
                        android:padding="7dp"
                        android:textColor="#585858"
                        android:layout_marginLeft="5dp"
                        android:text="@string/filter_check_notnow"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:text="@string/filter_max"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="인원 선택"
                        android:textSize="15sp"
                        android:textColorHint="#c8c8c8"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:drawablePadding="10dp"
                        android:inputType="number"
                        android:drawableRight="@drawable/ic_arrow_bottom"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="명"/>
                </LinearLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableRight="@drawable/ic_view_list_white_24dp"
                    android:layout_marginRight="25dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#efefef"/>
            <!-- 테마 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:text="@string/filter_theme"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@drawable/selector_check"
                            android:padding="7dp"
                            android:textColor="#585858"
                            android:layout_margin="3dp"
                            android:text="교통"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@drawable/selector_check"
                            android:padding="7dp"
                            android:textColor="#585858"
                            android:layout_margin="3dp"
                            android:text="레저"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@drawable/selector_check"
                            android:padding="7dp"
                            android:textColor="#585858"
                            android:layout_margin="3dp"
                            android:text="문화예술"/>
                    </TableRow>
                    <TableRow>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@drawable/selector_check"
                            android:padding="7dp"
                            android:textColor="#585858"
                            android:layout_margin="3dp"
                            android:text="숙소"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@drawable/selector_check"
                            android:padding="7dp"
                            android:textColor="#585858"
                            android:layout_margin="3dp"
                            android:text="스포츠관광"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:visibility="invisible"
                            android:button="@drawable/selector_check"
                            android:padding="7dp"
                            android:textColor="#585858"
                            android:layout_margin="3dp"
                            android:text="더미"/>
                    </TableRow>
                    <TableRow>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@drawable/selector_check"
                            android:padding="7dp"
                            android:textColor="#585858"
                            android:layout_margin="3dp"
                            android:text="유흥"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#efefef"/>
            <!-- 키워드 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp">
                <TextView
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:text="@string/filter_keyword"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableRight="@drawable/ic_edit_remove"
                    android:textColorHint="#c8c8c8"
                    android:hint="키워드를 입력하세요"
                    android:textSize="15sp"
                    android:layout_marginRight="25dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/do_filter"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorAccent"
        android:text="@string/filter_button"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white" />

</RelativeLayout>